--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="grey">#c3c3c3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="reciever_chat_background">#1E88E5</color>
+    <color name="sender_chat_background">#7CB342</color>
 </resources>
